css/media-queries.css
* {
    padding: 0;
    margin: 0;
}

html, body {
    height: 100%;
    margin: 0;
}

body {
    display: flex;
    flex-direction: column;
    align-items: center;
}

nav {
    width: 100%;
}
.alert-info {
    border: 1px solid #dadada;
    background-color: #ccffff;
    padding: 1em 0;
    font-size: 1em;
    width: calc(100% - 1em);
    text-align: center;
    margin: .5em .5em;
}

.alert-info a {
    text-decoration: none;
    display: inline-block;
    color: black;
}

h1 {
    font-size: 4em;
}

.header-container {
    text-align: center;
    width: 100%;
}

.nav-links {
    display: flex;
    flex-wrap: wrap;
}

.nav-links li {
    list-style-type: none;
    background-color: #cccccc;
    padding: 1em 1.5em;
    font-size: 1em;
    display: inline-block;
    text-align: center;
    margin: .5em .5em;
    width: 100%;
}

.header-img img{
    max-width: calc(100% - 1em);
    margin: .5em .5em;
}

section p{
    margin: .5em 0;
}

.main{
    margin: 1em .5em;
}

.sub-section{
    margin: 3em .5em;
    font-style: italic;
}

.sub-section h2{
    font-size: 1.50em;
}

.main h2{
    font-size: 1.75em;
}

footer{
    display: flex;
    padding: 2em .5em;
    width: calc(100% - 1em);
    margin-top: auto;
    justify-content: space-between;
}

.social-media {
    display: flex;
}

.social-media li {
    list-style-type: none;
    padding: 0 .5em;
}

i {
    color: #000000;
}



@media screen and (min-width:600px){
    body {
        margin: 2em;
    }

    .hidden-on-desktop {
        display: none;
    }

    .header-container {
        display: flex;
        margin-left: .5em;
        justify-content: space-between;
        align-items: flex-end;
        width: 100%;
    }

    nav {
        width: fit-content;
    }

    .nav-links li {
        width: fit-content;
        padding: 0;
        background-color: white;
    }

    .header-img {
        width: 100%;
        margin: 2em 0;
    }

    .header-img img {
        width: 100%;
    }

    .section-container {
        display: flex;
    }

    .main {
        width: 66%;
    }

    sub-section {
        width: 33%;
    }

    footer {
        padding: 2em;
        width: calc(100% - 4em);
        margin-top: auto;
    }

}

